# stacker

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/jsMain/kotlin/: Config.kt  Freighter.kt  TokenList.kt  Wallet.kt  globals.kt  main.kt  utils.kt
composeApp/src/jsMain/kotlin/appwrite/: DbClient.kt
composeApp/src/jsMain/kotlin/backend/: PriceFetcher.kt  StackerBackend.kt
composeApp/src/jsMain/kotlin/ui/components/: InputField.kt  Styles.kt  TxSubmitModal.kt  modal.kt
composeApp/src/jsMain/kotlin/vault/: vaults.kt
composeApp/src/jsMain/kotlin/vault/ui/: VaultList.kt  VaultPage.kt
composeApp/src/jsMain/kotlin/walletkit/: WalletConnect.kt  WalletKit.kt  walletKitBridge.kt
composeApp/src/jsMain/resources/: index.html  styles.css
composeApp/webpack.config.d/: config.js
contracts/: Cargo.toml  aqua_pair.wasm
contracts/aqua_lp_stacker/: Cargo.toml
contracts/aqua_lp_stacker/src/: events.rs  lib.rs  test.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
gradle/: libs.versions.toml
server/: build.gradle.kts
shared/: build.gradle.kts
shared/src/commonMain/kotlin/: RepoConfig.kt  ResultWithHash.kt  utils.kt
shared/src/commonMain/kotlin/aqua/pair/: AquaPairRepo.kt
shared/src/commonMain/kotlin/token/: TokenRepo.kt
shared/src/commonMain/kotlin/vault/: VaultRepo.kt
shared/src/commonMain/kotlin/vault/aqua_lp_stacker/: AquaLpStackerRepo.kt
(+1 files in other folders)
