[package]
name = "aqua_lp_stacker"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
vault = { path = "../vault" }
soroban-fixed-point-math = { version = "1.1.1"}


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
